--- a/pages/index.css
+++ b/pages/index.css
@@ -10,25 +10,25 @@
 @import url(../blocks/name/name.css);
 @import url(../blocks/name/__title/name__title.css);
 @import url(../blocks/name/__subtitle/name__subtitle.css);
-@import url(../blocks/editbutton/editbutton.css);
-@import url(../blocks/addbutton/addbutton.css);
+@import url(../blocks/name/__editbutton/name__editbutton.css);
+@import url(../blocks/profile/__addbutton/profile__addbutton.css);
 @import url(../blocks/photo/photo.css);
-@import url(../blocks/photo/__list/photo__list.css);
-@import url(../blocks/heartbutton/heartbutton.css);
-@import url(../blocks/photo/__greed/photo__greed.css);
-@import url(../blocks/photo/__title/photo__title.css);
-@import url(../blocks/photo/__blok/photo__blok.css);
+@import url(../blocks/card/__heartbutton/card__heartbutton.css);
+@import url(../blocks/card/__greed/card__greed.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__blok/card__blok.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/Close/Close.css);
-@import url(../blocks/savebutton/savebutton.css);
-@import url(../blocks/Close/__pic/Close__pic.css);
-@import url(../blocks/savebutton/__color/savebutton__color.css);
-@import url(../blocks/popup/__kusto/popup__kusto.css);
-@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__savebutton/popup__savebutton.css);
+@import url(../blocks/popup/__pic/popup__pic.css);
+@import url(../blocks/popup/__color/popup__color.css);
 @import url(../blocks/popup/__about/popup__about.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/name/__block/name__block.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/card/card.css);
