--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,30 +1,3 @@
-.photo {
-  display: grid;
-  margin: 0 auto;
-  grid-template-rows: auto;
-  list-style: none;
-  max-width: calc(100% - 400px);
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  /*grid-template-columns: 1fr 1fr 1fr;*/
-  /*grid-template-rows: 1fr 1fr 1fr;*/
-  column-gap: 17px;
-  row-gap: 18px;
-  padding: 0px;
-  margin-top: 50px;
-  font-size: 0px;
-}
-
-@media all and (min-width: 320px) and (max-width: 768px) {
-  .photo {
-    display: flex;
-    flex-direction: column;
-    max-width: calc(100% - 38px);
-  }
-}
-
-@media all and (max-width: 320px) {
-  .photo {
-    margin-top: 36px;
-    row-gap: 19px;
-  }
+.photo{
+  margin: 0;
 }
