--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,7 @@
 .popup {
   content: "";
-  position: fixed;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
   right: 0;
   bottom: 0;
   left: 0;
