--- a/blocks/popup/__savebutton/popup__savebutton.css
+++ b/blocks/popup/__savebutton/popup__savebutton.css
@@ -5,6 +5,12 @@
   margin-top: 48px;
   margin-left: 36px;
   border-radius: 2px;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  color: #FFFFFF;
    }
 
 @media all and (max-width: 320px) {
@@ -15,3 +21,4 @@
     margin-left: 22px;
   }
 }
+
