--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,14 +4,16 @@
   grid-template-rows: auto;
   list-style: none;
   max-width: calc(100% - 400px);
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  /*grid-template-columns: 1fr 1fr 1fr;*/
+  grid-template-columns: 1fr 1fr 1fr;
+  /*grid-template-columns: repeat(auto-fit, (250px, 1fr));*/
   /*grid-template-rows: 1fr 1fr 1fr;*/
   column-gap: 17px;
   row-gap: 18px;
   padding: 0px;
   margin-top: 50px;
   font-size: 0px;
+  justify-content: center;
+  
 }
 
 @media all and (min-width: 320px) and (max-width: 768px) {
