--- a/blocks/name/__subtitle/name__subtitle.css
+++ b/blocks/name/__subtitle/name__subtitle.css
@@ -6,6 +6,10 @@
   line-height: 22px;
   margin: 0px auto;
   margin-left: 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 300px;
 
 }
 
