--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
-  max-width: 100vh;
-  max-width: 100vw;
+  max-height: 100vh;
+  max-width: 1280px;
+  
   margin: 0 auto;
   font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   -moz-osx-font-smoothing: grayscale;
