--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,7 @@
 .popup__input {
   border: none;
   border-bottom: 1px solid #000000;
-}
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+ }
