--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -2,8 +2,7 @@
   background-color: black;
   width: 358px;
   height: 50px;
-  margin-top: 48px;
-  margin-left: 36px;
+  margin-bottom: 20px;
   border-radius: 2px;
   font-family: Inter;
   font-size: 18px;
