--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile__addbutton {
+.profile__add-button {
   background-image: url(../../../images/KREST.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -10,31 +10,31 @@
   margin-left: 245px;
 }
 
-.profile__addbutton:hover {
+.profile__add-button:hover {
   opacity: 50%;
 }
 
 @media all and (min-width: 1039px) and (max-width: 1279px) {
-  .profile__addbutton {
+  .profile__add-button {
     margin-left: auto;
   }
 }
 
 @media all and (min-width: 769px) and (max-width: 1038px) {
-  .profile__addbutton {
+  .profile__add-button {
     margin: 0 auto;
   }
 }
 
 @media all and (min-width: 320px) and (max-width: 1038px) {
-  .profile__addbutton {
+  .profile__add-button {
     width: 100%;
     min-height: 50px;
   }
 }
 
 @media all and (min-width: 320px) and (max-width: 768px) {
-  .profile__addbutton {
+  .profile__add-button {
     margin: 0 auto;
     width: 100%;
     min-height: 50px;
