--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,10 +1,11 @@
 .footer__text {
   color: #545454;
-  font-family: Inter;
+  font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
+  margin: 0;
 }
 
 @media all and (min-width: 320px) and (max-width: 876px) {
