--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,15 @@
 .header {
-  max-width: calc(100% - 400px);
+  max-width: 880px;
   margin-top: 45px;
   margin-left: auto;
   margin-right: auto;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  border-bottom: 1px solid rgba(84, 84, 84, 1);
 }
 
-@media all and (min-width: 321px) and (max-width: 768px) {
+@media all and (min-width: 321px) and (max-width: 1279px) {
   .header {
-    max-width: calc(100% - 200px);
+    width: calc(100% - 200px);
+    margin: auto;
   }
 }
 
