--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,38 +2,31 @@
   background-image: url(../../../images/KREST.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 1);
+  border: 2px solid rgba(255, 255, 255, 1);
   min-width: 150px;
-  max-height: 50px;
+  height: 50px;
   margin: 0px;
-  margin-top: 33px;
-  margin-left: 245px;
+  margin-top: 34px;
+  margin-left: 244px;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
-  opacity: 50%;
+  opacity: 60%;
+  cursor: pointer;
 }
 
-@media all and (min-width: 1039px) and (max-width: 1279px) {
+@media all and (min-width: 321px) and (max-width: 1120px) {
   .profile__add-button {
-    margin-left: auto;
+    margin: auto;
+    margin-top: 33px;
+    width: calc(100% - 400px);
   }
 }
 
-@media all and (min-width: 769px) and (max-width: 1038px) {
-  .profile__add-button {
-    margin: 0 auto;
-  }
-}
 
-@media all and (min-width: 320px) and (max-width: 1038px) {
-  .profile__add-button {
-    width: 100%;
-    min-height: 50px;
-  }
-}
-
-@media all and (min-width: 320px) and (max-width: 768px) {
+@media all and (max-width: 320px) {
   .profile__add-button {
     margin: 0 auto;
     width: 100%;
