--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,4 @@
-.avatar {
+.profile__avatar {
   border-radius: 100%;
   max-width: 120px;
   max-height: 120px;
@@ -6,8 +6,8 @@
   padding: 0px;
 }
 
-@media all and (min-width: 320px) and (max-width: 1038px) {
-  .avatar {
+@media all and (min-width: 320px) and (max-width: 1120px) {
+  .profile__avatar {
     margin-left: auto;
     margin-right: auto;
   }
