--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.name__edit-button {
+.profile__edit-button {
   background-image: url(../../../images/PENCILl.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -8,21 +8,24 @@
   margin: 0px;
   margin-top: 36px;
   margin-left: 19px;
-  }
+  border: 1px solid rgba(255, 255, 255, 1);
+  border-radius: 2px;
+}
 
-.name__edit-button:hover {
-  opacity: 50%;
+.profile__edit-button:hover {
+  opacity: 60%;
+  cursor: pointer;
 }
 
 @media all and (min-width: 320px) and (max-width: 768px) {
-  .name__edit-button {
+  .profile__edit-button {
     max-width: 20px;
     max-height: 20px;
   }
 }
 
 @media all and (max-width: 320px) {
-  .name__edit-button {
+  .profile__edit-button {
     min-width: 18px;
     max-height: 18px;
     margin-left: 10px;
