--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,4 @@
-.name__title {
+.profile__title {
   color: #FFFFFF;
   font-size: 42px;
   font-style: normal;
@@ -18,18 +18,19 @@
 }
 
 @media all and (min-width: 321px) and (max-width: 768px) {
-  .name__title {
+  .profile__title {
     font-size: 29px;
     line-height: 35px;
   }
 }
 
 @media all and (min-width: 320px) and (max-width: 768px) {
-  .name__title {
+  .profile__title {
     font-size: 27px;
     line-height: 33px;
     margin: 0 auto;
-    margin-left: 4px;
+    margin-left: 24px;
     margin-top: 23px;
+    max-width: 189px;
   }
 }
