--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.card__heart-button {
+.card__like-button {
   background-image: url(../../../images/HEART.svg);
   border: none;
   background-color: white;
@@ -9,6 +9,6 @@
   margin-top: 31px;
 }
 
-.card__heart-button:hover {
-  opacity: 50%;
+.card__like-button:hover {
+  opacity: 60%;
 }
