--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -7,8 +7,10 @@
   margin: 0px;
   margin-right: 20px;
   margin-top: 31px;
+  background-color: transparent;
 }
 
 .card__like-button:hover {
   opacity: 60%;
+  cursor: pointer;
 }
