--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -6,11 +6,13 @@
   font-weight: 400;
   line-height: 22px;
   margin: 0;
+  padding-bottom: 60px;
 }
 
 @media all and (min-width: 320px) and (max-width: 876px) {
   .footer__text {
     font-size: 14px;
     line-height: 17px;
+    padding-bottom: 36px;
   }
 }
