--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,19 @@
 .popup__container {
   position: relative;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   width: 430px;
   background-color: white;
   border-radius: 10px;
   justify-self: center;
   align-self: center;
-  margin-top: 280px;
+  top: 117px;
+  padding: 0px;
 }
 
 @media all and (max-width: 320px) {
   .popup__container {
     width: 282px;
-    margin-top: 165px;
+    top: 57px;
   }
 }
