--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,16 +1,18 @@
-.popup__about {
+.popup__form {
   display: flex;
   flex-direction: column;
-  row-gap: 27px;
+  row-gap: 20px;
   max-width: 358px;
-  margin-top: 24px;
+  margin-top: 0px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0px;
 }
 
 @media all and (max-width: 320px) {
-  .popup__about {
-    margin-top: 75px;
+  .popup__form {
+    margin-top: 0px;
     max-width: 238px;
+    row-gap: 0px;
   }
 }
