--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,10 +1,19 @@
 .popup__input {
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
   font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
   text-align: left;
-  margin-top: 27px;
- }
+  padding-bottom: 9px;
+  margin-top: -6px;
+  margin-bottom: 15px;
+}
+
+@media all and (max-width: 320px) {
+  .popup__input {
+    margin-bottom: 32px;
+    margin-top: -3px;
+  }
+}
