--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,21 @@
 .popup__title {
+  font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
   line-height: 29px;
   margin-left: 36px;
+  margin-top: 35px;
+  margin-bottom: 53px;
+  padding: 0px;
 }
 
 @media all and (max-width: 320px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    text-align: left;
+    margin-top: 27px;
+    margin-left: 23px;
+    margin-bottom: 75px;
   }
 }
