--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,7 @@
 
 @media all and (min-width: 321px) and (max-width: 1279px) {
   .header {
-    width: calc(100% - 200px);
+    width: 75%;
     margin: auto;
     padding-top: 40px;
   }
