--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -15,7 +15,16 @@
   cursor: pointer;
 }
 
-@media all and (max-width: 320px) {
+@media all and (min-width: 500px) and (max-width: 768px) {
+  .popup__close-button {
+    height: 25px;
+    width: 25px;
+    margin-left: 365px;
+    margin-top: -35px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 499px){
   .popup__close-button {
     height: 20px;
     width: 20px;
