--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -2,17 +2,23 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  max-width: 358px;
   margin-top: 0px;
+  padding: 0px;
+  width: 358px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0px;
 }
 
-@media all and (max-width: 320px) {
+@media all and (min-width: 500px) and (max-width: 768px) {
+  .popup__form {
+    width: 286px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 499px) {
   .popup__form {
     margin-top: 0px;
-    max-width: 238px;
+    width: 238px;
     row-gap: 0px;
   }
 }
