--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,19 +1,18 @@
 .popup__input {
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
   text-align: left;
   padding-bottom: 9px;
-  margin-top: -6px;
-  margin-bottom: 15px;
+  margin-bottom: 9px;
 }
 
 @media all and (max-width: 320px) {
   .popup__input {
-    margin-bottom: 32px;
-    margin-top: -3px;
+    margin-bottom: 26px;
+    padding-bottom: 11px;
   }
 }
