--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -2,8 +2,8 @@
   background-color: black;
   width: 358px;
   height: 50px;
-  margin-top: 10px;
-  margin-bottom: 47px;
+  margin-top: 18px;
+  margin-bottom: 38px;
   border-radius: 2px;
   font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   font-size: 18px;
@@ -11,6 +11,7 @@
   font-weight: 400;
   line-height: 22px;
   color: #FFFFFF;
+  border: none;
 }
 
 .popup__save-button:hover {
@@ -18,13 +19,19 @@
   cursor: pointer;
 }
 
-@media all and (max-width: 320px) {
+@media all and (min-width: 500px) and (max-width: 768px) {
+  .popup__save-button {
+    width: 286px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 499px) {
   .popup__save-button {
     height: 46px;
     width: 238px;
     margin-left: auto;
-    margin-bottom: 30px;
-    margin-top: px;
+    margin-top: 15px;
+    margin-bottom: 25px;
     font-size: 14px;
     line-height: 17px;
   }
