--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,11 +6,18 @@
   line-height: 29px;
   margin-left: 36px;
   margin-top: 35px;
-  margin-bottom: 53px;
+  margin-bottom: 48px;
   padding: 0px;
 }
 
-@media all and (max-width: 320px) {
+@media all and (min-width: 500px) and (max-width: 768px) {
+  .popup__title {
+    line-height: 27px;
+    font-size: 22px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 499px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
