--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -22,6 +22,8 @@
 @media all and (min-width: 500px) and (max-width: 768px) {
   .popup__save-button {
     width: 286px;
+    margin-top: 13px;
+    margin-bottom: 22px;
   }
 }
 
