--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,8 +2,8 @@
   background-image: url(../../../images/CloseIcon.svg);
   background-size: cover;
   position: absolute;
-  margin-left: 438px;
-  margin-top: -40px;
+  left: 439px;
+  top: -40px;
   width: 32px;
   height: 32px;
   border: none;
@@ -19,16 +19,16 @@
   .popup__close-button {
     height: 25px;
     width: 25px;
-    margin-left: 365px;
-    margin-top: -38px;
+    left: 365px;
+    top: -38px;
   }
 }
 
-@media all and (min-width: 320px) and (max-width: 499px){
+@media all and (min-width: 320px) and (max-width: 499px) {
   .popup__close-button {
     height: 20px;
     width: 20px;
-    margin-left: 262px;
-    margin-top: -35px;
+    left: 262px;
+    top: -35px;
   }
 }
