--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,11 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 430px;
-  margin-left: 50px;
-  margin-right: 50px;
   background-color: white;
   border-radius: 10px;
   padding: 0px;
+  position: relative;
 }
 
 @media all and (min-width: 500px) and (max-width: 768px) {
