--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,8 @@
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-title/popup__image-title.css);
+@import url(../blocks/popup/__image-picture/popup__image-picture.css);
+@import url(../blocks/popup/_image/popup_type_image.css);
