--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -4,4 +4,11 @@
   padding: 0px;
   width: 100%;
   height: 78%;
+  object-fit: cover;
+
+}
+
+.card__image:hover {
+  opacity: 50%;
+  cursor: pointer;
 }
