--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -3,9 +3,9 @@
   margin: 0px;
   padding: 0px;
   width: 100%;
-  height: 78%;
+  min-height: 78%;
+  max-height: 78%;
   object-fit: cover;
-
 }
 
 .card__image:hover {
