--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,14 +5,18 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
+  width: 358px;
   text-align: left;
   padding-bottom: 9px;
   margin-bottom: 9px;
+  margin: 0;
 }
 
 @media all and (max-width: 320px) {
   .popup__input {
     margin-bottom: 26px;
     padding-bottom: 11px;
+    width: 238px;
   }
 }
+
