--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,9 @@
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 @import url(../blocks/popup/__image-picture/popup__image-picture.css);
 @import url(../blocks/popup/_image/popup_type_image.css);
+@import url(../blocks/input-container/input-container.css);
+@import url(../blocks/error/error.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
+@import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__overlay/popup__overlay.css);
+@import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
